# team05_tomorrow_clothes

./: .gitignore  README.md  add.xlsx  nohup.out  pyproject.toml
app/: settings.py  urls.py
config/: aws.json  smtp.json
content_post/: apps.py
content_post/apis/v1/: comment_router.py  create_feed_router.py  detail_router.py  main_router.py  mypage_router.py  scrap_router.py  test_create_feed_router.py  weather_router.py
content_post/models/: __init__.py  contents.py  feeds.py
content_post/services/: comment_service.py  create_feed_service.py  get_address_temp_service.py  get_feed_list_service.py
content_post/tests/: test_create_feed.py
static/admin/fonts/: LICENSE.txt
static/css/: common.css
static/css/add_update/: add_update.css  desktop_add_update.css
static/css/detail/: desktop_detail.css  detail.css
static/css/login/: desktop_login.css  login.css
static/css/main/: desktop_main.css  main.css
static/css/member/: desktop_member.css  member.css
static/css/mypage/: desktop_mypage.css  mypage.css
static/css/profile/: desktop_profile.css  profile.css
templates/: add.html  base.html  detail.html  login.html  main.html  member.html  mypage.html  profile.html  register.html  weather.html
templates/password/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
user_admission/: apps.py  views.py
user_admission/models/: __init__.py  user.py
user_admission/sevices/: create_user_service.py  login_service.py
user_admission/tests/: test_create_user.py
(+22 files in other folders)
